# neurodesk-mcp

./: README.md
data/: TEST_DATA_GUIDE.md  create_test_data.py
data/diffusion/: synthetic_dwi.nii.bvec  synthetic_response.txt
mcp/: QUICK_START.md  README.md  TEST_RESULTS.md  pyproject.toml  test_mcp_integration.py  test_tools.py
mcp/src/: __init__.py  neuroimaging_functions.py  server.py
mcp/styx_tmp/a9a1cfa88739e6c3_1_fast/: run.sh
mcp/styx_tmp/c2558f859d63d78d_0_bet/: run.sh
